--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
     "expo": "~54.0.25",
+    "expo-linear-gradient": "~15.0.7",
     "expo-splash-screen": "^31.0.11",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mask-text": "^0.15.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/styled-components-react-native": "^5.2.5",
     "typescript": "~5.9.2"
   },
