--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
     "expo": "~54.0.25",
+    "expo-blur": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-splash-screen": "^31.0.11",
     "expo-status-bar": "~3.0.8",
