--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "expo": "~54.0.25",
     "expo-blur": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
+    "expo-location": "~19.0.7",
     "expo-splash-screen": "^31.0.11",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
+    "react-native-google-places-autocomplete": "^2.6.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.20.1",
     "react-native-mask-text": "^0.15.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
