Página de cadastro de motolista

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "expo-image-picker": "~17.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
